<resources>
    <string name="app_name">Xsis Movie Show</string>

    <string name="tvStreamMovies">Stream Movies</string>
    <string name="tvAnywhere">Anywhere</string>
    <string name="tvTop10Movies">Top 10 Movies</string>
    <string name="tvExploreMovies">Explore Movies</string>
    <string name="tvTitle">Title</string>
    <string name="tvRating">Rating</string>
    <string name="tvRank">Rank</string>
    <string name="tvReleaseDate">Release Date</string>
    <string name="tvReleasedOn">Released on:</string>
    <string name="tvCrew">Crews</string>
</resources>