<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".ui.activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imgBackdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/colorPrimary"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPoster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="140dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="@id/imgBackdrop"
            app:layout_constraintStart_toStartOf="@id/imgBackdrop">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                android:src="@color/colorPrimaryDark"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/imgBackdrop"
            app:layout_constraintStart_toEndOf="@id/cardPoster"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/tvTitle"/>

        <TextView
            android:id="@+id/tvReleasedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSemiBlack"
            android:text="@string/tvReleasedOn"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorSemiBlack"
            app:layout_constraintStart_toEndOf="@id/tvReleasedOn"
            app:layout_constraintTop_toTopOf="@id/tvReleasedOn"
            app:layout_constraintBottom_toBottomOf="@+id/tvReleasedOn"
            tools:text="@string/tvReleaseDate"/>

        <TextView
            android:id="@+id/tvCrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:includeFontPadding="false"
            android:text="@string/tvCrew"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorOrange"
            app:layout_constraintStart_toStartOf="@id/cardPoster"
            app:layout_constraintTop_toBottomOf="@id/cardPoster"/>

        <TextView
            android:id="@+id/tvCrews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:text="@string/tvCrew"
            android:textColor="@color/white"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tvCrew"
            app:layout_constraintStart_toStartOf="@id/tvCrew"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:includeFontPadding="false"
            android:text="@string/tvRank"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorOrange"
            app:layout_constraintStart_toStartOf="@id/cardPoster"
            app:layout_constraintTop_toBottomOf="@id/tvCrews"/>

        <TextView
            android:id="@+id/tvRanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvRank"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvRank"
            app:layout_constraintStart_toStartOf="@id/tvRank"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:includeFontPadding="false"
            android:text="@string/tvRating"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorOrange"
            app:layout_constraintStart_toStartOf="@id/tvRanks"
            app:layout_constraintTop_toBottomOf="@id/tvRanks"/>

        <TextView
            android:id="@+id/tvRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            tools:text="@string/tvRating"
            app:layout_constraintStart_toStartOf="@id/tvRating"
            app:layout_constraintTop_toBottomOf="@id/tvRating"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>