<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/tvStreamMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tvStreamMovies"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorOrange"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvAnywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tvAnywhere"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/tvStreamMovies"
        app:layout_constraintBottom_toBottomOf="@id/tvStreamMovies"
        app:layout_constraintStart_toEndOf="@id/tvStreamMovies"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvStreamMovies"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/viewMovie"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvTop10Movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvTop10Movies"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toBottomOf="@id/viewMovie"
                app:layout_constraintStart_toStartOf="@id/viewMovie"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTop10Movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:listitem="@layout/item_movies"
                tools:itemCount="1"
                app:layout_constraintTop_toBottomOf="@id/tvTop10Movies"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExploreMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:listitem="@layout/item_explore_movies"
                tools:itemCount="1"
                app:layout_constraintTop_toBottomOf="@id/rvTop10Movies"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>